--- a/template-parts/_wp.scss
+++ b/template-parts/_wp.scss
@@ -20,6 +20,7 @@ figcaption {
   font-size: 0.7rem;
   line-height: 1.5;
   color: var(--fg-color);
+  text-align: center;
 }
 
 blockquote,
